# sei-cli

./: .gitignore  AGENTS.md  AUDIT.md  BATCH10_VALIDATION_REPORT.txt  BATCH9_VALIDATION_REPORT.txt  BUG_REPORT_SIGNER_WINDOW.md  CHANGELOG.md  CLAUDE.md  CODEX_HANDOFF_PDF_FIX.md  CODEX_TASK.md  CONTRIBUTING.md  DOCUMENT_EDIT_VALIDATION_REPORT.txt  EMPTY_BODY_CHECK_REPORT.txt  PROCESS_CREATE_AJAX_REPORT.txt  PROCESS_READ_VALIDATION_REPORT.txt  README.md  RELATORIO_READ_VALIDATION_REPORT.txt  RELATORIO_STRUCTURED_VALIDATION_REPORT.txt  SIGN_BLOCK_ENHANCEMENT.txt  profile.example.yaml  pyproject.toml
.context/: CONTEXT.md
.github/ISSUE_TEMPLATE/: agent_report.md  bug_report.md  feature_request.md
.specify/memory/: constitution.md
docs/: batch-relatorios.md  fixes.md  marcadores.md  operations.md  plan.md  tramitar.md
sei_cli/: auth.py  browser_editor.py  cli.py  client.py  config.py  models.py  parsers.py  relatorio_parser.py
sei_cli/operations/: __init__.py  contracts.py  errors.py  reading.py  workflows.py  writing.py
skills/openclaw/: SKILL.md
tests/: conftest.py  test_auth.py  test_auto_unit_switch.py  test_ciencia.py  test_download_pdf.py  test_operations.py  test_parsers.py  test_parsers_signatures.py  test_process_create_client.py  test_relatorio_parser.py  test_reopen.py  test_upload_external.py  test_workflows.py
tests/fixtures/: arvore_with_signatures.js  controle_processos.html  login_page.html  relatorio_body.html  tblProcessosGerados.html  tblProcessosRecebidos.html
workflows/: README.md
workflows/cbmrn/: reaprazamento.yaml
